feat: Add logic on clickable elements

--- a/src/components/pages/HomePage/Filters/FiltersDropdown/FiltersDropdownItem/FiltersDropdownItem.styles.scss
+++ b/src/components/pages/HomePage/Filters/FiltersDropdown/FiltersDropdownItem/FiltersDropdownItem.styles.scss
@@ -13,4 +13,10 @@
       background-color: rgba(254, 95, 30, 0.05);
     }
   }
+
+  &_active {
+    color: var(--accent-color);
+
+    background-color: rgba(254, 95, 30, 0.05);
+  }
 }
