--- a/src/components/pages/HomePage/Filters/FiltersDropdown/FiltersDropdown.styles.scss
+++ b/src/components/pages/HomePage/Filters/FiltersDropdown/FiltersDropdown.styles.scss
@@ -36,7 +36,7 @@
   position: absolute;
   left: 55%;
   top: 25px;
-  width: 132px;
+  min-width: 132px;
   overflow: hidden;
 
   background-color: var(--main-white);
