--- a/src/components/pages/HomePage/PizzaItems/PizzaItem/PizzaItemSettings/PizzaItemSettingsProp/PizzaItemSettingsProp.styles.scss
+++ b/src/components/pages/HomePage/PizzaItems/PizzaItem/PizzaItemSettings/PizzaItemSettingsProp/PizzaItemSettingsProp.styles.scss
@@ -7,14 +7,19 @@
   font-weight: 500;
 
   border-radius: 5px;
+  opacity: 0.3;
+  transition: all 0.2s ease;
 
   &_available {
     cursor: pointer;
-    background-color: rgba(208, 208, 208, 0.3);
+    background-color: var(--fourth-grey);
+    opacity: 1;
   }
 
   &_active {
-    background-color: var(--main-white);
+    color: var(--main-white);
+
+    background-color: var(--accent-color);
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.04);
   }
 }
