--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -8,4 +8,6 @@
   --second-grey: #d7d7d7;
   --third-grey: #b6b6b6;
   --fourth-grey: rgba(208, 208, 208, 0.3);
+  --fifth-grey: #f0f0f0;
+  --sixth-grey: #b4b4b4;
 }
